--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@ Hello there, awesome person!
   </head>
   <body>
     Hello there, awesome person! 
+    <img src="https://avatars1.githubusercontent.com/u/29310766?v=4">
   </body>
 </html>
