--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@ Hello there, awesome person!
   <body>
     Hello there, awesome person! 
     <img src="https://avatars1.githubusercontent.com/u/29310766?v=4">
+    <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
   </body>
 </html>
