--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ Hello there, awesome person!
   <h1>I'm a header 1!</h1>
   <head>
         <title>My awesome web page</title>
+        <link rel="stylesheet" href="style.css">
   </head>
   <body>
     Hello there, awesome person! 
